--- a/main.html
+++ b/main.html
@@ -3,27 +3,73 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Javier Robles - Portfolio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" type="image/x-icon" href="static/images/portfolio-logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='static/css/styles.css'>
-    <script src='static/js/script.js'></script>
 </head>
 <body>
-    <header class="container-fluid d-flex justify-content-between p-3 align-items-center">
-        <h1 class="m-0">Javi Robles</h1>
-        <div id="menu" class="d-flex align-items-center">
-            <a>About me</a>
-            <a>Projects</a>
-            <a>Contact</a>
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-between p-3 align-items-center">
+                <span class="m-0" id="name" onclick="activatePage('about-me')">Javier Robles Samar</span>
+                <div id="mini-menu" class="d-sm-none">
+                    <button class="custom-button"><i class="bi bi-list"></i></button>
+                </div>
+                <div id="menu" class="d-none d-sm-flex align-items-center">
+                    <span class="actionLink" onclick="activatePage('projects')"><i class="bi bi-terminal me-1"></i>Projects</span>
+                    <span class="actionLink"><i class="bi bi-file-earmark-text me-1"></i>Resume</span>
+                    <span class="actionLink"><i class="bi bi-person-vcard me-1"></i>Contact</span>
+                </div>
+            </div>
         </div>
+        <div class="row" id="divider"></div>
     </header>
-    <div id="divider"></div>
-    <div class="container-lg">
-        
+    <div class="container-fluid" id="content">
+        <div class="row page active-page p-3" id="about-me">
+            <div class="col-12 col-md-6 col-lg-4 text-center px-1 p-md-1">
+                <img src="static/images/meAndRoxie.jpg" >
+            </div>
+            <div class="col-12 col-md-6 col-lg-8 ps-3">
+                <h1 class="">Hi, I'm Javi. Welcome to my portfolio</h1>
+                <p>I'm a web developer, amateur cook and that is my dog, Roxie. I used to work as a design engineer back in Mexico before moving to the US and pursuing a career as a developer.</p>
+                <h2>What to expect</h2>
+                <p>Everyone has the right to freedom of thought, conscience and religion; this right includes freedom to change his religion or belief, and freedom, either alone or in community with others and in public or private, to manifest his religion or belief in teaching, practice, worship and observance. Everyone has the right to freedom of opinion and expression; this right includes freedom to hold opinions without interference and to seek, receive and impart information and ideas through any media and regardless of frontiers. Everyone has the right to rest and leisure, including reasonable limitation of working hours and periodic holidays with pay.</p>
+            </div>
+        </div>
+        <div class="row page p-3" id="projects">
+            <div class="col-12">
+                <h1 class="text-center">Projects</h1>
+                <div class="d-flex justify-content-around flex-wrap">
+                    <div class="text-center">
+                        <h2>Austin Housing</h2>
+                        <img src="austinhousing.jpg">
+                        <p>Description</p>
+                    </div>
+                    <div class="text-center">
+                        <h2>NYC<br>ESL speakers proficiency<br></h2>
+                        <img src="austinhousing.jpg">
+                        <p>Description</p>
+                    </div>
+                    <div class="text-center">
+                        <h2>Etiqueta Sana Website</h2>
+                        <img src="austinhousing.jpg">
+                        <p>Description</p>
+                    </div>
+                    <div class="text-center">
+                        <h2>NHANES analysis</h2>
+                        <img src="austinhousing.jpg">
+                        <p>Description</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="container-fluid">
 
     </footer>
 </body>
+<script src='static/js/script.js'></script>
 </html>
