images and styling changes

--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
             <div class="col-12 col-md-6 col-lg-4 text-center px-1 p-md-1">
                 <img src="static/images/meAndRoxie.jpg" >
             </div>
-            <div class="col-12 col-md-6 col-lg-8 ps-3">
+            <div class="col-12 col-md-6 col-lg-8 ps-3 d-flex flex-column justify-content-center">
                 <h1 class="">Hi, I'm Javi. Welcome to my portfolio</h1>
                 <p>I'm a web developer, amateur cook and that is my dog, Roxie. I used to work as a design engineer back in Mexico before moving to the US and pursuing a career as a developer.</p>
-                <h2>What to expect</h2>
-                <p>Everyone has the right to freedom of thought, conscience and religion; this right includes freedom to change his religion or belief, and freedom, either alone or in community with others and in public or private, to manifest his religion or belief in teaching, practice, worship and observance. Everyone has the right to freedom of opinion and expression; this right includes freedom to hold opinions without interference and to seek, receive and impart information and ideas through any media and regardless of frontiers. Everyone has the right to rest and leisure, including reasonable limitation of working hours and periodic holidays with pay.</p>
+                <p>On this page you can find projects that I've worked on, as well as my contact info. Feel free to look around and reach out to me with questions or comments.</p>
+                <div class="text-end pe-3">
+                    <button class="custom-button px-3 py-2"><i class="bi bi-terminal me-1"></i>See projects</button>
+                    <button class="custom-button px-3 py-2 ms-3"><i class="bi bi-person-vcard me-1"></i>Contact me</button>
+                </div>
             </div>
         </div>
         <div class="row page p-3" id="projects">
