--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="icon" type="image/x-icon" href="static/images/portfolio-logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='static/css/styles.css'>
+    <link rel="stylesheet" type="text/css" media="screen" href="static/css/base.css">
+    <!-- <link rel='stylesheet' type='text/css' media='screen' href='static/css/neon.css'> -->
+    <link rel='stylesheet' type='text/css' media='screen' href='static/css/daytime.css'>
 </head>
-<body>
+<body class="d-flex flex-column">
     <header class="container-fluid">
         <div class="row">
             <div class="col-12 d-flex justify-content-between p-3 align-items-center">
@@ -19,59 +21,105 @@
                     <button class="custom-button"><i class="bi bi-list"></i></button>
                 </div>
                 <div id="menu" class="d-none d-sm-flex align-items-center">
-                    <span class="actionLink" onclick="activatePage('projects')"><i class="bi bi-terminal me-1"></i>Projects</span>
-                    <span class="actionLink"><i class="bi bi-file-earmark-text me-1"></i>Resume</span>
-                    <span class="actionLink"><i class="bi bi-person-vcard me-1"></i>Contact</span>
+                    <span class="actionLink" onclick="activatePage('projects')" id="tab-projects"><i class="bi bi-terminal me-1"></i>Projects</span>
+                    <span class="actionLink" onclick="activatePage('resume')" id="tab-resume"><i class="bi bi-file-earmark-text me-1"></i>Resume</span>
+                    <span class="actionLink" onclick="activatePage('contact')" id="tab-contact"><i class="bi bi-person-vcard me-1"></i>Contact</span>
                 </div>
             </div>
         </div>
         <div class="row" id="divider"></div>
     </header>
-    <div class="container-fluid" id="content">
+    <main class="container-fluid flex-grow-1 d-flex flex-column justify-content-center" id="content">
         <div class="row page active-page p-3" id="about-me">
-            <div class="col-12 col-md-6 col-lg-4 text-center px-1 p-md-1">
+            <div class="col-12 col-md-5 col-lg-4 px-3 d-flex justify-content-center align-items-center">
                 <img src="static/images/meAndRoxie.jpg" >
             </div>
-            <div class="col-12 col-md-6 col-lg-8 ps-3 d-flex flex-column justify-content-center">
-                <h1 class="">Hi, I'm Javi. Welcome to my portfolio</h1>
-                <p>I'm a web developer, amateur cook and that is my dog, Roxie. I used to work as a design engineer back in Mexico before moving to the US and pursuing a career as a developer.</p>
-                <p>On this page you can find projects that I've worked on, as well as my contact info. Feel free to look around and reach out to me with questions or comments.</p>
-                <div class="text-end pe-3">
-                    <button class="custom-button px-3 py-2"><i class="bi bi-terminal me-1"></i>See projects</button>
-                    <button class="custom-button px-3 py-2 ms-3"><i class="bi bi-person-vcard me-1"></i>Contact me</button>
+            <div class="col-12 col-md-7 col-lg-8 px-3 d-flex flex-column justify-content-center">
+                <h1 class="px-3">Hi, I'm Javi. Welcome to my portfolio</h1>
+                <div class="p-3 text-container">
+                    <p>I'm a web developer, amateur cook and that is my dog, Roxie. I used to work as a design engineer back in Monterrey, Mexico before moving to the US and pursuing a career as a developer. I have been learning how to code for almost two years now, going through classes, tutorials and projects. I enjoy challenging myself and learning by doing and testing.</p>
+                    <p>On this page you can find projects that I've worked on, as well as my contact info. Feel free to look around and reach out to me with questions or comments.</p>
+                </div>
+                <div class="text-center my-2">
+                    <button class="custom-button m-2 px-3 py-2"><i class="bi bi-terminal me-1"></i>See projects</button>
+                    <button class="custom-button m-2 px-3 py-2"><i class="bi bi-person-vcard me-1"></i>Contact me</button>
                 </div>
             </div>
         </div>
         <div class="row page p-3" id="projects">
             <div class="col-12">
                 <h1 class="text-center">Projects</h1>
-                <div class="d-flex justify-content-around flex-wrap">
-                    <div class="text-center">
-                        <h2>Austin Housing</h2>
-                        <img src="austinhousing.jpg">
-                        <p>Description</p>
+            </div>
+            <div class="col-am-6 col-xl-3">
+                <div class="text-container text-center p-3">
+                    <h2>Austin Housing</h2>
+                    <img src="austinhousing.jpg">
+                    <p>Description</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-3">
+                <div class="text-container text-center p-3">
+                    <h2>NYC ESL speakers</h2>
+                    <img src="austinhousing.jpg">
+                    <p>Description</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-3">
+                <div class="text-container text-center p-3">
+                    <h2>NHANES analysis</h2>
+                    <img src="austinhousing.jpg">
+                    <p>Description</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-3">
+                <div class="text-container text-center p-3">
+                    <h2>Etiqueta Sana</h2>
+                    <img src="austinhousing.jpg">
+                    <p>Description</p>
+                </div>
+                <!-- <div class="d-flex justify-content-around flex-wrap">
+                    <div class="text-center text-container p-3">
+                        
                     </div>
-                    <div class="text-center">
+                    <div class="text-center text-container p-3">
                         <h2>NYC<br>ESL speakers proficiency<br></h2>
                         <img src="austinhousing.jpg">
                         <p>Description</p>
                     </div>
-                    <div class="text-center">
+                    <div class="text-center text-container p-3">
                         <h2>Etiqueta Sana Website</h2>
                         <img src="austinhousing.jpg">
                         <p>Description</p>
                     </div>
-                    <div class="text-center">
+                    <div class="text-center text-container p-3">
                         <h2>NHANES analysis</h2>
                         <img src="austinhousing.jpg">
                         <p>Description</p>
                     </div>
                 </div>
+            </div> -->
+        </div>
+    </main>
+    <footer class="container-fluid mt-auto text-center">
+        <div class="row" id="divider"></div>
+        <div class="row">
+            <div class="col-12 col-md-6 mt-2 mb-md-2">
+                <p class="m-0">Thanks for stopping by!</p>
+                <p class="m-0">Let's keep in touch</p>
+                <div class="m-2">
+                    <a class="custom-button m-1 text-center py-1 px-2"><i class="bi bi-linkedin"></i></a>
+                    <a class="custom-button m-1 text-center py-1 px-2"><i class="bi bi-envelope"></i></a>
+                    <a class="custom-button m-1 text-center py-1 px-2"><i class="bi bi-github"></i></a>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 my-2">
+                <span>
+                    <i class="bi bi-image me-1"></i>Background by<br>
+                    <a target="_blank" href="https://unsplash.com/es/@htrinidad?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hilda Trinidad</a><br>
+                    on <a target="_blank"  href="https://unsplash.com/es/fotos/silueta-de-la-montana-bajo-el-cielo-azul-durante-la-noche-UE1ardzW5gM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+                </span>
             </div>
         </div>
-    </div>
-    <footer class="container-fluid">
-
     </footer>
 </body>
 <script src='static/js/script.js'></script>
