frosted glass effect top-bottom

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <div class="col-12 col-md-5 col-lg-4 px-3 d-flex justify-content-center align-items-center">
                 <img src="static/images/meAndRoxie.jpg" >
             </div>
-            <div class="col-12 col-md-7 col-lg-8 px-3 d-flex flex-column justify-content-center">
+            <div class="col-12 mt-3 m-md-0 col-md-7 col-lg-8 px-3 d-flex flex-column justify-content-center">
                 <h1 class="px-3">Hi, I'm Javi. Welcome to my portfolio</h1>
                 <div class="p-3 text-container">
-                    <p>I'm a web developer, amateur cook and that is my dog, Roxie. I used to work as a design engineer back in Monterrey, Mexico before moving to the US and pursuing a career as a developer. I have been learning how to code for almost two years now, going through classes, tutorials and projects. I enjoy challenging myself and learning by doing and testing.</p>
+                    <p>I'm a web developer, data analyst, amateur cook and that is my dog, Roxie.</p>
+                    <p>I used to work as a design engineer back in Monterrey, Mexico before moving to the US and pursuing a career as a developer. I have been coding for almost two years now, going through classes, tutorials and projects. I enjoy challenging myself and learning by doing and testing.</p>
                     <p>On this page you can find projects that I've worked on, as well as my contact info. Feel free to look around and reach out to me with questions or comments.</p>
                 </div>
                 <div class="text-center my-2">
@@ -50,28 +51,28 @@
             <div class="col-12">
                 <h1 class="text-center">Projects</h1>
             </div>
-            <div class="col-am-6 col-xl-3">
+            <div class="col-md-6 col-xl-3 mb-2">
                 <div class="text-container text-center p-3">
                     <h2>Austin Housing</h2>
                     <img src="austinhousing.jpg">
                     <p>Description</p>
                 </div>
             </div>
-            <div class="col-md-6 col-xl-3">
+            <div class="col-md-6 col-xl-3 mb-2">
                 <div class="text-container text-center p-3">
                     <h2>NYC ESL speakers</h2>
                     <img src="austinhousing.jpg">
                     <p>Description</p>
                 </div>
             </div>
-            <div class="col-md-6 col-xl-3">
+            <div class="col-md-6 col-xl-3 mb-2">
                 <div class="text-container text-center p-3">
                     <h2>NHANES analysis</h2>
                     <img src="austinhousing.jpg">
                     <p>Description</p>
                 </div>
             </div>
-            <div class="col-md-6 col-xl-3">
+            <div class="col-md-6 col-xl-3 mb-2">
                 <div class="text-container text-center p-3">
                     <h2>Etiqueta Sana</h2>
                     <img src="austinhousing.jpg">
@@ -115,7 +116,7 @@
             <div class="col-12 col-md-6 my-2">
                 <span>
                     <i class="bi bi-image me-1"></i>Background by<br>
-                    <a target="_blank" href="https://unsplash.com/es/@htrinidad?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hilda Trinidad</a><br>
+                    <a target="_blank" href="https://unsplash.com/es/@htrinidad?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hilda Trinidad</a>
                     on <a target="_blank"  href="https://unsplash.com/es/fotos/silueta-de-la-montana-bajo-el-cielo-azul-durante-la-noche-UE1ardzW5gM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
                 </span>
             </div>
