--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             </div>
         </div>
     </footer>
+    <div style="position: fixed;"></div>
 </body>
 <script src='static/js/script.js'></script>
 </html>
