red to orange pt-2

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <h1 class="px-3">Hi, I'm Javi. Welcome to my portfolio</h1>
                 <div class="p-3 text-container">
                     <p>I'm a web developer, data analyst, amateur cook and that is my dog, Roxie.</p>
-                    <p>I used to work as a design engineer back in Monterrey, Mexico before moving to the US and pursuing a career as a developer. I have been coding for almost two years now, going through classes, tutorials and projects. I enjoy challenging myself and learning by doing and testing.</p>
-                    <p>On this page you can find projects that I've worked on, as well as my contact info. Feel free to look around and reach out to me with questions or comments.</p>
+                    <p>I used to work as a design engineer back in Monterrey, Mexico before moving to the US and pursuing a career as a developer. I have been coding for almost two years now, in both Python and Javascript, going through classes, tutorials and projects. I enjoy challenging myself and learning by doing and testing things out.</p>
+                    <p>On this page you can find some projects that I've worked on, as well as my contact information. Feel free to look around and reach out to me with questions or comments.</p>
                 </div>
                 <div class="text-center my-2">
                     <button class="custom-button m-2 px-3 py-2"><i class="bi bi-terminal me-1"></i>See projects</button>
