--- a/index.html
+++ b/index.html
@@ -54,51 +54,41 @@
             <div class="col-md-6 col-xl-3 mb-2">
                 <div class="text-container text-center p-3">
                     <h2>Austin Housing</h2>
-                    <img src="austinhousing.jpg">
+                    <img src="static/images/austin-sqr.jpg">
                     <p>Description</p>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 mb-2">
                 <div class="text-container text-center p-3">
                     <h2>NYC ESL speakers</h2>
-                    <img src="austinhousing.jpg">
+                    <img src="static/images/nyc-sqr.jpg">
                     <p>Description</p>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 mb-2">
                 <div class="text-container text-center p-3">
                     <h2>NHANES analysis</h2>
-                    <img src="austinhousing.jpg">
+                    <img src="static/images/nhanes-sqr.jpg">
                     <p>Description</p>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 mb-2">
                 <div class="text-container text-center p-3">
                     <h2>Etiqueta Sana</h2>
-                    <img src="austinhousing.jpg">
+                    <img src="static/images/etiquetasana-sqr.jpg">
                     <p>Description</p>
                 </div>
-                <!-- <div class="d-flex justify-content-around flex-wrap">
-                    <div class="text-center text-container p-3">
-                        
-                    </div>
-                    <div class="text-center text-container p-3">
-                        <h2>NYC<br>ESL speakers proficiency<br></h2>
-                        <img src="austinhousing.jpg">
-                        <p>Description</p>
-                    </div>
-                    <div class="text-center text-container p-3">
-                        <h2>Etiqueta Sana Website</h2>
-                        <img src="austinhousing.jpg">
-                        <p>Description</p>
-                    </div>
-                    <div class="text-center text-container p-3">
-                        <h2>NHANES analysis</h2>
-                        <img src="austinhousing.jpg">
-                        <p>Description</p>
-                    </div>
-                </div>
-            </div> -->
+            </div>
+        </div>
+        <div class="row page p-3" id="resume">
+            <div class="col-12 text-center">
+                <h1>Resume</h1>
+            </div>
+        </div>
+        <div class="row page p-3" id="contact">
+            <div class="col-12 text-center">
+                <h1>Contact me</h1>
+            </div>
         </div>
     </main>
     <footer class="container-fluid mt-auto text-center">
@@ -116,8 +106,7 @@
             <div class="col-12 col-md-6 my-2">
                 <span>
                     <i class="bi bi-image me-1"></i>Background by<br>
-                    <a target="_blank" href="https://unsplash.com/es/@htrinidad?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hilda Trinidad</a>
-                    on <a target="_blank"  href="https://unsplash.com/es/fotos/silueta-de-la-montana-bajo-el-cielo-azul-durante-la-noche-UE1ardzW5gM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+                    <a target="_blank" href="https://unsplash.com/es/@aryncreativestudio?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Aaron Andary</a> on <a href="https://unsplash.com/es/fotos/fotografia-de-cielo-azul-afHVU5hBqnw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
                 </span>
             </div>
         </div>
