--- a/index.html
+++ b/index.html
@@ -5,86 +5,119 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Javier Robles - Portfolio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="icon" type="image/x-icon" href="static/images/portfolio-logo.png">
+    <link rel="icon" type="image/x-icon" href="static/images/roxieicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="static/css/base.css">
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='static/css/neon.css'> -->
-    <link rel='stylesheet' type='text/css' media='screen' href='static/css/daytime.css'>
 </head>
 <body class="d-flex flex-column">
     <header class="container-fluid">
         <div class="row">
-            <div class="col-12 d-flex justify-content-between p-3 align-items-center">
-                <span class="m-0" id="name" onclick="activatePageMini('about-me')">Javier Robles Samar</span>
+            <div class="col-12 d-flex p-3 justify-content-between align-items-center">
+                <button id="name" onclick="activatePageMini('about-me')">Javier Robles Samar</button>
                 <div id="mini-menu" class="d-md-none">
                     <button class="custom-button" onclick="expandMiniMenu();" id="minimenu-button"><i class="bi bi-chevron-compact-down"></i></button>
                 </div>
-                <div id="menu" class="d-none d-md-flex align-items-center">
-                    <span class="actionLink me-2" onclick="activatePage('projects')" id="tab-projects"><i class="bi bi-terminal me-1"></i>Projects</span>
-                    <span class="actionLink me-2" onclick="activatePage('resume')" id="tab-resume"><i class="bi bi-file-earmark-text me-1"></i>Resume</span>
-                    <span class="actionLink me-2" onclick="activatePage('contact')" id="tab-contact"><i class="bi bi-person-vcard me-1"></i>Contact</span>
+                <div id="menu" class="d-none d-md-flex column-gap-2">
+                    <button class="actionLink" onclick="activatePage('projects')" id="tab-projects"><i class="bi bi-terminal me-1"></i>Projects</button>
+                    <button class="actionLink" onclick="activatePage('resume')" id="tab-resume"><i class="bi bi-file-earmark-text me-1"></i>Resume</button>
+                    <button class="actionLink" onclick="activatePage('contact')" id="tab-contact"><i class="bi bi-person-vcard me-1"></i>Contact</button>
                 </div>
             </div>
         </div>
         <div class="row" id="divider"></div>
         <div id="minimenu" class="collapsible d-md-none flex-column align-items-center">
-            <div class="actionLink" onclick="activatePageMini('projects')" id="tab-projects"><i class="bi bi-terminal me-1"></i>Projects</div>
-            <div class="actionLink" onclick="activatePageMini('resume')" id="tab-resume"><i class="bi bi-file-earmark-text me-1"></i>Resume</div>
-            <div class="actionLink" onclick="activatePageMini('contact')" id="tab-contact"><i class="bi bi-person-vcard me-1"></i>Contact</div>
+            <button class="actionLink" onclick="activatePageMini('projects')" id="tab-projects"><i class="bi bi-terminal me-1"></i>Projects</button>
+            <button class="actionLink" onclick="activatePageMini('resume')" id="tab-resume"><i class="bi bi-file-earmark-text me-1"></i>Resume</button>
+            <button class="actionLink" onclick="activatePageMini('contact')" id="tab-contact"><i class="bi bi-person-vcard me-1"></i>Contact</button>
+
         </div>
         <div class="row d-md-none collapsible" id="divider"></div>    
     </header>
-    <main class="container-fluid flex-grow-1 d-flex flex-column justify-content-center" id="content">
-        <div class="row page active-page p-3" id="about-me">
-            <div class="col-12 col-md-5 col-lg-4 px-3 d-flex justify-content-center align-items-center">
-                <img src="static/images/meAndRoxie.jpg" >
+    <main class="container-fluid flex-grow-1 py-3 d-flex flex-column justify-content-center" id="content">
+        <div class="row page" id="about-me">
+            <div class="col-12 col-md-5 col-lg-4 px-3 text-center">
+                <img src="static/images/meAndRoxie.jpg" id="me-and-roxie">
             </div>
-            <div class="col-12 mt-3 m-md-0 col-md-7 col-lg-8 px-3 d-flex flex-column justify-content-center">
-                <h1 class="px-3">Hi, I'm Javi. Welcome to my portfolio</h1>
-                <div class="p-3 text-container">
-                    <p>I'm a web developer, data analyst, amateur cook and that is my dog, Roxie.</p>
-                    <p>I used to work as a design engineer back in Monterrey, Mexico before moving to the US and pursuing a career as a developer. I have been coding for almost two years now, in both Python and Javascript, going through classes, tutorials and projects. I enjoy challenging myself and learning by doing and testing things out.</p>
-                    <p>On this page you can find some projects that I've worked on, as well as my contact information. Feel free to look around and reach out to me with questions or comments.</p>
+            <div class="col-12 mt-3 m-md-0 col-md-7 col-lg-8 px-3 d-flex flex-column justify-content-between">
+                <h1 class='d-none' id="greeting">Hi, I'm Javi. Welcome to my portfolio.</h1>
+                <div class="text-container">
+                    <p class='d-none' id='p-1'>I'm a web developer, data analyst, amateur cook and that is my dog, Roxie.</p>
+                    <p class='d-none' id='p-2'>I used to work as a manufacturing design engineer back in Monterrey, Mexico before moving to DC with my partner and pursuing a career as a developer. I've been coding for almost two years now, in both Python and Javascript, going through tutorials, classes, and projects. I enjoy it a lot.</p>
+                    <p class='d-none' id='p-3'>On this page you can find some projects that I've worked on, as well as my contact information. Look around and feel free to reach me with questions, comments or just to say hi.</p>
                 </div>
-                <div class="text-center my-2">
-                    <button class="custom-button m-2 px-3 py-2" onclick="activatePage('projects')"><i class="bi bi-terminal me-1"></i>See projects</button>
-                    <button class="custom-button m-2 px-3 py-2" onclick="activatePage('contact')"><i class="bi bi-person-vcard me-1"></i>Contact me</button>
+                <div class="d-flex justify-content-center align-items-end column-gap-3 mt-3">
+                    <button class="custom-button px-3 py-2" onclick="activatePage('projects')"><i class="bi bi-terminal me-1"></i>See projects</button>
+                    <button class="custom-button px-3 py-2" onclick="activatePage('contact')"><i class="bi bi-person-vcard me-1"></i>Contact me</button>
                 </div>
             </div>
         </div>
-        <div class="row page p-3" id="projects">
+        <div class="row page active-page p-3" id="projects">
             <div class="col-12">
                 <h1 class="text-center">Projects</h1>
             </div>
-            <div class="col-md-6 col-xl-3 mb-2">
-                <div class="text-container text-center p-3">
-                    <h2>Austin Housing</h2>
-                    <img src="static/images/austin-sqr.jpg">
-                    <p>Description</p>
-                </div>
-            </div>
-            <div class="col-md-6 col-xl-3 mb-2">
-                <div class="text-container text-center p-3">
-                    <h2>NYC ESL speakers</h2>
-                    <img src="static/images/nyc-sqr.jpg">
-                    <p>Description</p>
-                </div>
-            </div>
-            <div class="col-md-6 col-xl-3 mb-2">
-                <div class="text-container text-center p-3">
-                    <h2>NHANES analysis</h2>
-                    <img src="static/images/nhanes-sqr.jpg">
-                    <p>Description</p>
-                </div>
-            </div>
-            <div class="col-md-6 col-xl-3 mb-2">
-                <div class="text-container text-center p-3">
+            <a class="col-md-6 col-xl-4 mb-2 projectLink" href="https://www.etiquetasana.com/" target="_blank">
+                <div class="d-flex project-title column-gap-2">
+                    <img src="static/images/logos/etiquetasana.svg">
                     <h2>Etiqueta Sana</h2>
-                    <img src="static/images/etiquetasana-sqr.jpg">
+                </div>
+                <div class="image-description">
+                    <p>Description</p>
+                    <img class="project-photo"  src="static/images/etiqueta-sqr.jpg">
+                </div>
+                <ul class="tag-container">
+                    <li>Javascript</li>
+                    <li>Flask</li>
+                    <li>SQLAlchemy</li>
+                    <li>Login</li>
+                    <li>Amazon S3</li>
+                    <li>Email</li>
+                    <li>PythonAnywhere</li>
+                    <li>Pillow</li>
+                    <li>Bootstrap</li>
+                </ul>
+            </a>
+            <a class="col-md-6 col-xl-4 mb-2 projectLink" href="https://javrobs.github.io/house_pricing_analysis/" target="_blank">
+                <div class="d-flex project-title column-gap-2">
+                    <img src="static/images/logos/austinhouses.png">
+                    <h2>Austin Housing</h2>
+                </div>
+                <div class="image-description">
+                    <p>Description</p>
+                    <img class="project-photo" src="static/images/austin-sqr.jpg">
+                </div>
+                <ul class="tag-container">
+                    <li>Javascript</li>
+                    <li>Flask API</li>
+                    <li>Leaflet Map</li>
+                    <li>Neural Network</li>
+                    <li>Linear Regression</li>
+                    <li>Pandas</li>
+                    <li>Bootstrap</li>
+                </ul>
+            </a>
+            <a class="col-md-6 col-xl-4 mb-2 projectLink" href="https://javrobs.github.io/nyc_lep_speakers_demo/" target="_blank">
+                <div class="d-flex project-title column-gap-2">
+                    <img src="static/images/logos/nycspeakers.png">
+                    <h2>NYC ESL speakers</h2>
+                </div>
+                <div class="image-description">
+                    <img class="project-photo"  src="static/images/nyc-sqr.jpg">
                     <p>Description</p>
                 </div>
-            </div>
+                <div class="tag-container">
+                    <li>Javascript</li>
+                    <li>Flask API</li>
+                    <li>Plotly Graphs</li>
+                    <li>Pymongo</li>
+                    <li>Bootstrap</li>
+                </div>
+            </a>
+            <!-- <div class="col-md-6 col-xl-3 mb-2">
+                <h2>NHANES analysis</h2>
+                <img class="project-photo"  src="static/images/nhanes-sqr.jpg">
+                <p>Description</p>
+            </div> -->
         </div>
         <div class="row page p-3" id="resume">
             <div class="col-12 text-center">
@@ -100,21 +133,21 @@
     <footer class="container-fluid mt-auto text-center">
         <div class="row" id="divider"></div>
         <div class="row">
-            <div class="col-12 col-md-6 mt-2 mb-md-2">
-                <p class="m-0">Thanks for stopping by!</p>
-                <p class="m-0">Let's keep in touch</p>
+            <div class="col-12 col-md mt-2 mb-md-2">
+                <p class="m-0">Thanks for stopping by</p>
+                <p class="m-0">Let's keep in touch:</p>
                 <div class="m-2">
                     <a class="custom-button m-1 text-center py-1 px-2" href="https://www.linkedin.com/in/javier-robles-samar/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     <a class="custom-button m-1 text-center py-1 px-2" href="mailto:javieroblesamar@gmail.com"><i class="bi bi-envelope"></i></a>
                     <a class="custom-button m-1 text-center py-1 px-2" href="https://github.com/javrobs" target="_blank"><i class="bi bi-github"></i></a>
                 </div>
             </div>
-            <div class="col-12 col-md-6 my-2">
+            <!-- <div class="col-12 col-md-6 my-2">
                 <span>
                     <i class="bi bi-image me-1"></i>Background by<br>
                     <a target="_blank" href="https://unsplash.com/es/@aryncreativestudio?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Aaron Andary</a> on <a href="https://unsplash.com/es/fotos/fotografia-de-cielo-azul-afHVU5hBqnw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
                 </span>
-            </div>
+            </div> -->
         </div>
     </footer>
     <div style="position: fixed;"></div>
