blurry back on project image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row d-md-none collapsible" id="divider"></div>    
     </header>
     <main class="container-fluid flex-grow-1 py-3 d-flex flex-column justify-content-center" id="content">
-        <div class="row page" id="about-me">
+        <div class="row page active-page" id="about-me">
             <div class="col-12 col-md-5 col-lg-4 px-3 text-center">
                 <img src="static/images/meAndRoxie.jpg" id="me-and-roxie">
             </div>
@@ -43,7 +43,7 @@
                 <h1 class='d-none' id="greeting">Hi, I'm Javi. Welcome to my portfolio.</h1>
                 <div class="text-container">
                     <p class='d-none' id='p-1'>I'm a web developer, data analyst, amateur cook and that is my dog, Roxie.</p>
-                    <p class='d-none' id='p-2'>I used to work as a manufacturing design engineer back in Monterrey, Mexico before moving to DC with my partner and pursuing a career as a developer. I've been coding for almost two years now, in both Python and Javascript, going through tutorials, classes, and projects. I enjoy it a lot.</p>
+                    <p class='d-none' id='p-2'>I used to work in manufacturing as a design engineer back in Monterrey, Mexico before moving to DC with my partner and pursuing a career as a developer. I've been coding for almost two years now, in both Python and Javascript, going through tutorials, classes, and projects. I enjoy it a lot.</p>
                     <p class='d-none' id='p-3'>On this page you can find some projects that I've worked on, as well as my contact information. Look around and feel free to reach me with questions, comments or just to say hi.</p>
                 </div>
                 <div class="d-flex justify-content-center align-items-end column-gap-3 mt-3">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <div class="row page active-page p-3" id="projects">
+        <div class="row page p-3" id="projects">
             <div class="col-12">
                 <h1 class="text-center">Projects</h1>
             </div>
@@ -66,6 +66,7 @@
                     <img class="project-photo"  src="static/images/etiqueta-sqr.jpg">
                 </div>
                 <ul class="tag-container">
+                    <li>Full-Stack</li>
                     <li>Javascript</li>
                     <li>Flask</li>
                     <li>SQLAlchemy</li>
@@ -87,10 +88,12 @@
                     <img class="project-photo" src="static/images/austin-sqr.jpg">
                 </div>
                 <ul class="tag-container">
+                    <li>Data Visualization</li>
                     <li>Javascript</li>
                     <li>Flask API</li>
                     <li>Leaflet Map</li>
                     <li>Neural Network</li>
+                    <li>TensorFlow</li>
                     <li>Linear Regression</li>
                     <li>Pandas</li>
                     <li>Bootstrap</li>
