footer columns fixed

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <footer class="container-fluid mt-auto text-center">
         <div class="row">
             <div class="col divider"></div>
-            <div class="col-12 col-md my-2">
+            <div class="col-12 my-2">
                 <p class="m-0">Thanks for stopping by</p>
                 <p class="m-0">Let's keep in touch:</p>
                 <div class="m-2">
