testing fix background element

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="static/css/base.css">
 </head>
 <body class="d-flex flex-column">
+    <div class="background"></div>
     <header class="container-fluid">
         <div class="row">
             <div class="col-12 d-flex p-3 justify-content-between align-items-center">
